force-app/main/default/objects/RTL_Do_not_Contact_Info__c/RTL_Do_not_Contact_Info__c.object-meta.xml
<CustomObject>
    <description>To store Each Product Group with Contact Channels</description>
    <label>Do not Contact Info.</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Do not Contact Info. Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Do not Contact Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>