force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Channel_All__c.field-meta.xml
<CustomField>
    <fullName>Channel_All__c</fullName>
    <formula>IF( INCLUDES(Channel__c, &quot;All&quot;), &quot;Y&quot;, null)</formula>
    <label>Channel All</label>
    <type>Text</type>
</CustomField>