force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Channel_Direct_Contact__c.field-meta.xml
<CustomField>
    <fullName>Channel_Direct_Contact__c</fullName>
    <formula>IF( INCLUDES(Channel__c, &quot;Direct Contact&quot;), &quot;Y&quot;, null)</formula>
    <label>Channel Direct Contact</label>
    <type>Text</type>
</CustomField>