force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Channel_Phone__c.field-meta.xml
<CustomField>
    <fullName>Channel_Phone__c</fullName>
    <formula>IF( INCLUDES(Channel__c, &quot;Phone&quot;), &quot;Y&quot;, null)</formula>
    <label>Channel Phone</label>
    <type>Text</type>
</CustomField>