force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Channel_SMS__c.field-meta.xml
<CustomField>
    <fullName>Channel_SMS__c</fullName>
    <formula>IF( INCLUDES(Channel__c, &quot;SMS&quot;), &quot;Y&quot;, null)</formula>
    <label>Channel SMS</label>
    <type>Text</type>
</CustomField>