force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If period is not &apos;OTHER&apos;, End Date can be blank</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>