force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to expired if the end date is passed today&apos;s date</description>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>