force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/MK_CODE_EXT_KEY__c.field-meta.xml
<CustomField>
    <fullName>MK_CODE_EXT_KEY__c</fullName>
    <description>External key for donot contact from external sytem (eg. wise target, cigna)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MK CODE EXT KEY</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>