force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/PD_All__c.field-meta.xml
<CustomField>
    <fullName>PD_All__c</fullName>
    <formula>IF( ISPICKVAL(Product_Group__c, &quot;All&quot;), &quot;Y&quot;, null)</formula>
    <label>PD All</label>
    <type>Text</type>
</CustomField>