force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/PD_Bancassurance__c.field-meta.xml
<CustomField>
    <fullName>PD_Bancassurance__c</fullName>
    <formula>IF( ISPICKVAL(Product_Group__c, &quot;Bancassurance&quot;), &quot;Y&quot;, null)</formula>
    <label>PD Bancassurance</label>
    <type>Text</type>
</CustomField>