force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/PD_Credit_Cards__c.field-meta.xml
<CustomField>
    <fullName>PD_Credit_Cards__c</fullName>
    <formula>IF( ISPICKVAL(Product_Group__c, &quot;Credit Cards&quot;), &quot;Y&quot;, null)</formula>
    <label>PD Credit Cards</label>
    <type>Text</type>
</CustomField>