force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/PD_Mutual_Fund__c.field-meta.xml
<CustomField>
    <fullName>PD_Mutual_Fund__c</fullName>
    <formula>IF( ISPICKVAL(Product_Group__c, &quot;Mutual fund&quot;), &quot;Y&quot;, null)</formula>
    <label>PD Mutual Fund</label>
    <type>Text</type>
</CustomField>