force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <defaultValue>IF(CONTAINS($Profile.Name, &apos;Retail&apos;)
, &apos;1 Year&apos;
, &apos;6 Months&apos;)</defaultValue>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>Life Time</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>