force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group / Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Survey</label>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
                <label>Not Consent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>