force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>