force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/RTL_Check_Start_Dt_and_End_Dt__c.field-meta.xml
<CustomField>
    <fullName>RTL_Check_Start_Dt_and_End_Dt__c</fullName>
    <description>To check whether user has input end date the same with start date</description>
    <formula>IF( Start_Date__c =  End_Date__c , true, false)</formula>
    <label>Check Start Dt and End Dt</label>
    <type>Checkbox</type>
</CustomField>