force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/RTL_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>RTL_Created_Time__c</fullName>
    <formula>MID(TEXT(CreatedDate),12,8)</formula>
    <label>Created Time</label>
    <type>Text</type>
</CustomField>