force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/RTL_CreatedBy_UserName__c.field-meta.xml
<CustomField>
    <fullName>RTL_CreatedBy_UserName__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
    <label>Created By User Name</label>
    <type>Text</type>
</CustomField>