force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/RTL_LastModifiedBy_UserName__c.field-meta.xml
<CustomField>
    <fullName>RTL_LastModifiedBy_UserName__c</fullName>
    <formula>CreatedBy.LastModifiedBy.FirstName + &apos; &apos; + LastModifiedBy.LastName</formula>
    <label>Last Modified By User Name</label>
    <type>Text</type>
</CustomField>