force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/RTL_RecordType_DevName__c.field-meta.xml
<CustomField>
    <fullName>RTL_RecordType_DevName__c</fullName>
    <formula>Customer__r.RecordType.DeveloperName</formula>
    <label>Account Record Type Developer Name</label>
    <type>Text</type>
</CustomField>