force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/RTL_TMB_Customer_ID_PE__c.field-meta.xml
<CustomField>
    <fullName>RTL_TMB_Customer_ID_PE__c</fullName>
    <formula>Customer__r.TMB_Customer_ID_PE__c</formula>
    <label>TMB Customer ID</label>
    <type>Text</type>
</CustomField>