force-app/main/default/objects/RTL_Do_not_Contact_Info__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>