force-app/main/default/objects/RTL_Do_not_Contact_Info__c/validationRules/Cannot_Change_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_End_Date</fullName>
    <active>true</active>
    <description>if period != other, end date cannot be changed</description>
    <errorConditionFormula>IF( !ISPICKVAL(Period__c,&quot;Other&quot;) 
			&amp;&amp; ISCHANGED(End_Date__c) &amp;&amp; !ISNEW()
		,TRUE
		,FALSE)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date Cannot Be Changed</errorMessage>
</ValidationRule>