force-app/main/default/objects/RTL_Do_not_Contact_Info__c/validationRules/Check_Start_Date_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Start_Date_and_End_Date</fullName>
    <active>true</active>
    <description>To check whether user has input end date the same with start date</description>
    <errorConditionFormula>Start_Date__c = End_Date__c</errorConditionFormula>
    <errorMessage>Not allow to input start date and end date</errorMessage>
</ValidationRule>