force-app/main/default/objects/RTL_Do_not_Contact_Info__c/validationRules/End_Date_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>OR( End_Date__c &gt; (TODAY() +(365.2425*100)) , 
End_Date__c &lt; (TODAY() - (365.2425*50)))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date Invalid</errorMessage>
</ValidationRule>