force-app/main/default/objects/RTL_Do_not_Contact_Info__c/validationRules/Period_Other_End_Date_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Period_Other_End_Date_Not_Blank</fullName>
    <active>true</active>
    <description>check if period = other, end date can not be blank</description>
    <errorConditionFormula>IF( ISPICKVAL(Period__c, &apos;Other&apos;) &amp;&amp; ISBLANK(End_Date__c)
, TRUE
, FALSE  )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Period is Other, please input the End Date.</errorMessage>
</ValidationRule>