force-app/main/default/objects/RTL_Do_not_Contact_Info__c/validationRules/Start_Date_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Start_Date__c &gt; (TODAY() +(365.2425*100)) , 
Start_Date__c &lt; (TODAY() - (365.2425*50)))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date Invalid</errorMessage>
</ValidationRule>